feat(auth): use jsend format as token return data format
